[package]
name = "amcofixer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0.28", features = ["zlib"], default-features = false }
base64 = "0.21.5"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
urlencoding = "2.1.3"
